# imdb_bot

./: .gitignore  Cargo.toml  README.md
hack/: dl-files.sh
src/: download.rs  main.rs
src/download/: mod.rs
