[package]
name = "imdb_bot"
version = "0.1.0"
authors = ["jbpratt78 <jbpratt78@gmail.com>"]
edition = "2018"

[dependencies]
imdb-index = "0.1.3"
env_logger = "0.5.6"
failure = "0.1"
reqwest = "0.9.2"
bstr = { version = "0.2.0", default-features = false, features = ["std"] }
log = { version = "0.4", features = ["std"] }
flate2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1.0"

[dependencies.ws]
version = "*"
features = ["ssl"]
